# folder_organizer

./: Cargo.toml  README.md
examples/moodle_example/: README.md  config.json  moodle_matcher.js
src/: get_froms.rs  main.rs
src/folder_organizer/: config.rs  hash_storage.rs  mod.rs
src/folder_organizer/action_handlers/: mod.rs  move_file.rs  show_file.rs
src/folder_organizer/matchers/: eval_js.rs  hash_storage.rs  mod.rs  user_selection.rs
src/folder_organizer/util/: dialog_lock.rs  file.rs  file_action.rs  matcher.rs  mod.rs
