[package]
edition = "2021"
name = "folder-organizer-macos"
version = "0.1.0"
[dependencies]
anyhow = "1.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
native-dialog = "*"
plist = "1"
quick-js = "0.4.1"
regex = "1.5.5"
serde_json = "1.0.79"
serde_regex = "1.1.0"
sha3 = "0.10.1"
xattr = "0.2.2"

[dependencies.serde]
features = ["derive"]
serde_json = "1.0.79"
sha3 = "0.10.1"
version = "1.0.136"
xattr = "0.2.2"
